# fast_api_rental

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 9eeb207c4409_create_items_table.py
app/: database.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  item.py  user.py
src/: config.py
tests/: test_user.py
